Add test, add BinaryHeap, create package test