@@ -1,21 +1,19 @@
-package com.sveta.collections.list;
+package com.sveta.collections.test;
 
-import static org.junit.jupiter.api.Assertions.*;
-
+import com.sveta.collections.list.MyArrayList;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class MyLinkedListTest {
+class MyArrayListTest {
 
     @Test
     void isEmpty_listEmpty_expectTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         boolean result = list.isEmpty();
@@ -27,7 +25,7 @@ class MyLinkedListTest {
     @Test
     void isEmpty_listIsNotEmpty_expectFalse() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Potato");
 
         // when
@@ -40,7 +38,7 @@ class MyLinkedListTest {
     @Test
     void size_sizeZero_expectedZero() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         int result = list.size();
@@ -52,7 +50,7 @@ class MyLinkedListTest {
     @Test
     void size_sizeOne_expectedOne() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Cat");
 
         // when
@@ -65,7 +63,7 @@ class MyLinkedListTest {
     @Test
     void contains_listContainsElement_expectedTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Cat");
 
         // when
@@ -78,7 +76,7 @@ class MyLinkedListTest {
     @Test
     void contains_listIsNotContainsElement_expectedFalse() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Dog");
 
         // when
@@ -89,23 +87,9 @@ class MyLinkedListTest {
     }
 
     @Test
-    void contains_elementContainZero_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Frog");
-        list.add(null);
-
-        // when
-        boolean result = list.contains(null);
-
-        // then
-        Assertions.assertTrue(result);
-    }
-
-    @Test
     void add_listAddElement_expectedTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         list.add("Dog");
@@ -116,52 +100,9 @@ class MyLinkedListTest {
     }
 
     @Test
-    void add_lastIsNull_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-
-        // when
-        list.addFirst("Dog");
-
-        // then
-        boolean result = list.contains("Dog");
-        Assertions.assertTrue(result);
-    }
-
-    @Test
-    void add_lastIsNotNull_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Frog");
-        list.add("Duck");
-
-        // when
-        list.add(2,"Dog");
-
-        // then
-        boolean result = list.contains("Dog");
-        Assertions.assertTrue(result);
-    }
-
-    @Test
-    void add_IndexIsNull_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Frog");
-        list.add("Duck");
-
-        // when
-        list.add(0,"Dog");
-
-        // then
-        boolean result = list.contains("Dog");
-        Assertions.assertTrue(result);
-    }
-
-    @Test
     void remove_listRemoveElement_expectedTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -176,7 +117,7 @@ class MyLinkedListTest {
     @Test
     void remove_listNotFoundElement_expectedFalse() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -187,37 +128,9 @@ class MyLinkedListTest {
     }
 
     @Test
-    void remove_currentPrevNotZero_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Cat");
-        list.add("Frog");
-
-        // when
-        boolean result = list.remove("Frog");
-
-        // then
-        Assertions.assertTrue(result);
-    }
-
-    @Test
-    void remove_currentNextNotZero_expectedTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Frog");
-        list.add("Goat");
-
-        // when
-        boolean result = list.remove("Frog");
-
-        // then
-        Assertions.assertTrue(result);
-    }
-
-    @Test
     void clear_listIsClear_expectedZero() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -231,7 +144,7 @@ class MyLinkedListTest {
     @Test
     void get_indexOutOfBond_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -241,13 +154,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: 2, Size: 1", exception.getMessage());
+        assertEquals("Index out of range: 2", exception.getMessage());
     }
 
     @Test
     void get_existingIndex_expectElement() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -260,7 +173,7 @@ class MyLinkedListTest {
     @Test
     void get_negativeIndex_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -270,13 +183,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: -1, Size: 1", exception.getMessage());
+        assertEquals("Index out of range: -1", exception.getMessage());
     }
 
     @Test
     void set_setNewElement_expectPreviousElement() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -290,7 +203,7 @@ class MyLinkedListTest {
     @Test
     void set_elementIndexOutOfBond_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         var exception = assertThrows(
@@ -299,13 +212,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: 10, Size: 0", exception.getMessage());
+        assertEquals("Index out of range: 10", exception.getMessage());
     }
 
     @Test
     void add_addElementOutOfRange_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         var exception = assertThrows(IndexOutOfBoundsException.class,
@@ -313,13 +226,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: 100, Size: 0", exception.getMessage());
+        assertEquals("Index out of range: 100", exception.getMessage());
     }
 
     @Test
     void add_addElement_expectElement() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Cat");
         list.add("Dog");
         list.add("Frog");
@@ -335,7 +248,7 @@ class MyLinkedListTest {
     @Test
     void add_elementIndexOutOfBond_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
 
         // when
         var exception = assertThrows(
@@ -344,13 +257,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: -10, Size: 0", exception.getMessage());
+        assertEquals("Index out of range: -10", exception.getMessage());
     }
 
     @Test
     void testAdd_testCapacity_expectCapacity() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Fro");
 
         // when
@@ -364,11 +277,11 @@ class MyLinkedListTest {
     @Test
     void testRemove_removeElement_expectPrevElement() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
-        String result = list.removeFirst();
+        String result = list.remove(0);
 
         // then
         Assertions.assertEquals("Frog", result);
@@ -377,7 +290,7 @@ class MyLinkedListTest {
     @Test
     void testRemove_elementIndexOutOfBond_expectException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -387,13 +300,13 @@ class MyLinkedListTest {
         );
 
         // then
-        assertEquals("Index: 10, Size: 1", exception.getMessage());
+        assertEquals("Index out of range: 10", exception.getMessage());
     }
 
     @Test
     void indexOf_findElementByName_expectIndex() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frogs");
         list.add("Frog");
         list.add("Frogg");
@@ -409,7 +322,7 @@ class MyLinkedListTest {
     @Test
     void indexOf_notFindElementByName_expectMinusOne() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
 
         // when
@@ -422,7 +335,7 @@ class MyLinkedListTest {
     @Test
     void lastIndexOf_returnLastIndexOfElement_expectIndex() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Frog");
         list.add("Frogg");
         list.add("Frog");
@@ -438,7 +351,7 @@ class MyLinkedListTest {
     @Test
     void lastIndexOf_notFindLastIndexOfElement_expectMinusOne() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Rabbit");
 
         // when
@@ -449,9 +362,23 @@ class MyLinkedListTest {
     }
 
     @Test
+    void testToString_returnString_expectString() {
+        // given
+        List<String> list = new MyArrayList();
+        list.add("Hello");
+        list.add("World");
+
+        // when
+        String result = list.toString();
+
+        // then
+        Assertions.assertEquals("Hello\nWorld\n", result);
+    }
+
+    @Test
     void toArray_transformFromListToArray_expectArray() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Hello");
         list.add("World");
 
@@ -467,7 +394,7 @@ class MyLinkedListTest {
     @Test
     void testToArray_transformFromListToArray_expectArray() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Hello");
         list.add("World");
 
@@ -481,25 +408,9 @@ class MyLinkedListTest {
     }
 
     @Test
-    void testToArray_aLengthMoreThanCapacity_expectArray() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Hello");
-        list.add("World");
-
-        // when
-        String[] result = list.toArray(new String[3]);
-
-        // then
-        assertEquals(3, result.length);
-        assertEquals("Hello", result[0]);
-        assertEquals("World", result[1]);
-    }
-
-    @Test
     void containsAll_listContainsAllElement_expectTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Hello");
         list.add("World");
         list.add("Warms");
@@ -515,7 +426,7 @@ class MyLinkedListTest {
     @Test
     void containsAll_listNotContainsAllElement_expectFalse() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList();
         list.add("Hello");
         list.add("World");
         Collection<String> elementsToCheck = List.of("Hello", "Java");
@@ -528,37 +439,9 @@ class MyLinkedListTest {
     }
 
     @Test
-    void containsAll_cIsEmpty_expectTrue() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        list.add("Hello");
-        list.add("World");
-        Collection<String> elementsToCheck = List.of();
-
-        // when
-        boolean actual = list.containsAll(elementsToCheck);
-
-        // then
-        assertTrue(actual);
-    }
-
-    @Test
-    void containsAll_listIsEmpty_expectFalse() {
-        // given
-        List<String> list = new MyLinkedList<>();
-        Collection<String> elementsToCheck = List.of("Hello", "World");
-
-        // when
-        boolean actual = list.containsAll(elementsToCheck);
-
-        // then
-        assertFalse(actual);
-    }
-
-    @Test
     void addAll_addElements_expectElementsAdded() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         List<String> input = List.of("A", "B", "C");
 
         // when
@@ -575,7 +458,7 @@ class MyLinkedListTest {
     @Test
     void addAll_emptyCollection_expectFalse() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         List<String> empty = List.of();
 
         // when
@@ -589,7 +472,7 @@ class MyLinkedListTest {
     @Test
     void testAddAll_intoMiddle_expectTrue() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         list.add("A");
         list.add("D");
 
@@ -608,7 +491,7 @@ class MyLinkedListTest {
     @Test
     void addAll_emptyCollection_returnsFalse() {
         // given
-        List<Integer> list = new MyLinkedList<>();
+        List<Integer> list = new MyArrayList<>();
         list.add(1);
 
         // when
@@ -622,7 +505,7 @@ class MyLinkedListTest {
     @Test
     void subList_middleRange() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         list.add("A");
         list.add("B");
         list.add("C");
@@ -641,7 +524,7 @@ class MyLinkedListTest {
     @Test
     void subList_negativeFromIndex_throwException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         list.add("A");
 
         // when
@@ -653,7 +536,7 @@ class MyLinkedListTest {
     @Test
     void subList_toIndexGreaterThanSize_throwException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         list.add("A");
 
         // when
@@ -665,7 +548,7 @@ class MyLinkedListTest {
     @Test
     void subList_fromGreaterThanTo_throwException() {
         // given
-        List<String> list = new MyLinkedList<>();
+        List<String> list = new MyArrayList<>();
         list.add("A");
         list.add("B");
 
@@ -673,5 +556,73 @@ class MyLinkedListTest {
         Assertions.assertThrows(IndexOutOfBoundsException.class,
                 () -> list.subList(2, 1)
         );
+    }
+
+    @Test
+    void iterator_nextElement_expectNextElement() {
+        // given
+        List<String> list = new MyArrayList<>();
+        list.add("A");
+        list.add("B");
+        list.add("C");
+        list.add("D");
+
+        // when
+        Iterator<String> iterator = list.iterator();
+        iterator.next();
+
+        // then
+        assertEquals("B", iterator.next());
+        assertEquals("C", iterator.next());
+        assertEquals("D", iterator.next());
+        Assertions.assertThrows(NoSuchElementException.class,
+                iterator::next
+        );
+        assertFalse(iterator.hasNext());
+    }
+
+
+    @Test
+    void listIterator_nextElement_expectNextElement() {
+        // given
+        List<String> list = new MyArrayList<>();
+        list.add("A");
+        list.add("B");
+        list.add("C");
+        list.add("D");
+
+        // when
+        ListIterator<String> iterator = list.listIterator(1);
+        iterator.next();
+
+        // then
+        assertEquals("C", iterator.next());
+        assertEquals("D", iterator.next());
+        Assertions.assertThrows(NoSuchElementException.class,
+                iterator::next
+        );
+        assertFalse(iterator.hasNext());
+    }
+
+    @Test
+    void listIterator_previousElement_expectPrevElement() {
+        // given
+        List<String> list = new MyArrayList<>();
+        list.add("A");
+        list.add("B");
+        list.add("C");
+        list.add("D");
+
+        // when
+        ListIterator<String> iterator = list.listIterator(3);
+        iterator.previous();
+
+        // then
+        assertEquals("B", iterator.previous());
+        assertEquals("A", iterator.previous());
+        Assertions.assertThrows(NoSuchElementException.class,
+                iterator::previous
+        );
+        assertFalse(iterator.hasPrevious());
     }
 }
